--- a/FirstSteps/CudaHelloWorld/CudaHelloWorld/CudaHelloWorld.vcxproj
+++ b/FirstSteps/CudaHelloWorld/CudaHelloWorld/CudaHelloWorld.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{5FA89ADB-EA9F-4938-AF34-552520E66E9F}</ProjectGuid>
-    <RootNamespace>FirstSteps</RootNamespace>
+    <ProjectGuid>{93B9ADE2-A868-4E74-A73C-A38C0614D133}</ProjectGuid>
+    <RootNamespace>CudaHelloWorld</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
